Migration auf JRE 11 und Netbeans 11